tests/baselines/reference/invalidSwitchContinueStatement.errors.txt
tests/cases/conformance/statements/continueStatements/invalidSwitchContinueStatement.ts(5,9): error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.


==== tests/cases/conformance/statements/continueStatements/invalidSwitchContinueStatement.ts (1 errors) ====
    // continue is not allowed in a switch statement
    
    switch (12) {
        case 5:
            continue;
            ~~~~~~~~~
!!! error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.
    }
    